[package]
name = "crispy-stalker"
description = "Async Stalker/MAG portal API client"
version = "0.2.0"
edition = "2024"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/moabualruz/crispy-stalker"
homepage = "https://github.com/moabualruz/crispy-stalker"
documentation = "https://docs.rs/crispy-stalker"
readme = "README.md"
keywords = ["iptv", "stalker", "mag", "api-client", "streaming"]
categories = ["api-bindings", "multimedia", "network-programming"]
rust-version = "1.85"

[dependencies]
crispy-iptv-types = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls-native-roots", "json", "gzip"] }
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2"
url = "2"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tracing = "0.1"
md-5 = "0.10"
sha2 = "0.10"
sha1 = "0.10"
rand = "0.8"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
